<resources>
    <string name="app_name">Music App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_songs">Top Songs</string>
    <string name="top_artists">Top Artists</string>
    <string name="home_fragment">Music App</string>
    <string name="add_account">doesn\'t have an account yet ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Most_popular_songs">Most Popular Songs</string>
    <string name="Top_Albums">Top Albums</string>
    <string name="failedLogIn">wrong email or password</string>
    <string name="invalid_email_format">Invalid email</string>
    <string name="username">Username</string>
    <string name="invalid_sign_up">invalid data</string>
</resources>
