<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".views.authentication.signup.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:background="#aa000000"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/emailET"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"></EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/usernameET"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/username"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"></EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/passwordET"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"></EditText>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:id="@+id/signUpPB"
            android:visibility="gone"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"></ProgressBar>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/lemonmilk_medium"
            android:id="@+id/signUpbtn"
            android:text="Sign Up"
            android:textSize="20sp"></Button>

    </LinearLayout>
</LinearLayout>