<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context=".views.authentication.login.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:background="#aa000000"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/emailET"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"></EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/passworddET"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"></EditText>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:id="@+id/logInPB"
            android:visibility="gone"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
            ></ProgressBar>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/lemonmilk_medium"
            android:id="@+id/logInBtn"
            android:text="Log In"
            android:textSize="20sp"></Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:id="@+id/noAccountBtn"
            android:text="@string/add_account"></TextView>
    </LinearLayout>
</LinearLayout>